--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
-html,body ,#root{
+html,
+body,
+#root {
   width: 100%;
   height: 400vh;
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-  
+  scroll-behavior: smooth;
+  scroll-snap-type: y proximity;
+
 }
