--- a/src/componetsh/clip_path/clip_path.css
+++ b/src/componetsh/clip_path/clip_path.css
@@ -1,52 +1,84 @@
- 
-  section {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100vh;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    clip-path: circle(100px at center center);
-    z-index: 10;
-    
-  }
-  .container{
-    width: 17%;
-  position: relative;
-  margin-top: 330vh;
-  background: #fff;
-  padding: 100px;
-  color: #0e112e;
-  z-index: 10;
+ section {
+   position: fixed;
+   top: 0px;
+   left: 0px;
+   width: 100%;
+   height: 100vh;
+   background: #fff;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   clip-path: circle(100px at center center);
+   z-index: 10;
+  overflow: hidden;
+ }
 
-  }
-  .innerText{
-    position: fixed;
-    top:50%;
-    left: 100%;
-    transform: translateY(-50%);
-    white-space: nowrap;
-    z-index: 11;
-    font-size: 10vw;
-    color: #0e112e;
-    text-align: center;
-    width: 100%;
-    
-  }
-  .text{
-    position: fixed;
-    top:50%;
-    left: 100%;
-    transform: translateY(-50%);
-    white-space: nowrap;
-    z-index: 11;
-    font-size: 10vw;
-    color: transparent;
-    -webkit-text-stroke: 2px #0e112e;
-    text-align: center;
-    width: 100%;
-    
-  }
+ .container {
+   width: 900px;
+   height: 100vh;
+   position: relative;
+   margin-top: 330vh;
+   background: white;
+   color: #0e112e;
+   z-index: 10;
+  left: 100px;
+  overflow-y:visible;
+ }
+ #skil{
+  right: 50px;
+ }
+
+ .innerText {
+   position: fixed;
+   top: 50%;
+   left: 100%;
+   transform: translateY(-50%);
+   white-space: nowrap;
+   z-index: 11;
+   font-size: 10vw;
+   color: #0e112e;
+   text-align: center;
+   width: 100%;
+ }
+
+ .innerText2 {
+   position: fixed;
+   top: 30%;
+   right: 100%;
+   transform: translateY(-50%);
+   white-space: nowrap;
+   z-index: 11;
+   font-size: 9vw;
+   color: #0e112e;
+   text-align: center;
+   width: 100%;
+ }
+
+ .text {
+   position: fixed;
+   top: 50%;
+   left: 100%;
+   transform: translateY(-50%);
+   white-space: nowrap;
+   z-index: 11;
+   font-size: 10vw;
+   color: transparent;
+   -webkit-text-stroke: 2px #0e112e;
+   text-align: center;
+   width: 100%;
+ }
+
+ .text2 {
+   position: fixed;
+   top: 30%;
+   right: 100%;
+   transform: translateY(-50%);
+   white-space: nowrap;
+   z-index: 11;
+   font-size: 9vw;
+   color: transparent;
+   -webkit-text-stroke: 2px #0e112e;
+   text-align: center;
+   width: 100%;
+
+ }
