--- a/src/componetsh/clip.css
+++ b/src/componetsh/clip.css
@@ -49,7 +49,9 @@
   flex-direction: column;
   color: white;
 }
-
+.displaynone{
+  display: none;
+}
 .Html_container {
   position: fixed;
   top: 0;
