--- a/src/componetsh/contack/contack.css
+++ b/src/componetsh/contack/contack.css
@@ -1,18 +1,18 @@
-.content_container {
-  width: 100vw;
+.contack_container {
+  width: 100%;
   height: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-
+  overflow: hidden;
+  background-color: white;
 }
 
 .iletişim_text {
-  background-color: red;
+ 
   width: 500px;
   height: 550px;
-  
   border-radius: 20px;
 }
 
@@ -33,7 +33,7 @@
   border-radius: 10px;
   padding: 20px;
   width: 100%;
-  height: 100%;
+  height: 80%;
   display: flex;
   flex-direction: column;
 }
