--- a/src/componetsh/projeck/projeck.css
+++ b/src/componetsh/projeck/projeck.css
@@ -1,19 +1,27 @@
 .projeck_container {
-    width: 100vw;
-    
+    width: 100%;
     display: flex;
+    overflow: hidden;
     flex-direction: column;
     flex-wrap: wrap;
+    background-color: white;
+    overflow: hidden;
+}
+
+.projeck_text {
+    padding-top: 5%;
+    padding-left: 10%;
 }
 
 .projeck_area {
     width: 100%;
     height: 100%;
     display: flex;
-    
+    justify-content: center;
     align-items: center;
-    gap: 20px;
-    left: 0px;
+    gap: 10px;
+    flex-wrap: wrap;
+    padding-bottom: 11%;
 
 }
 
@@ -27,9 +35,12 @@
     box-shadow: -9px 9px 18px #5a5a5a,
         9px -9px 18px #ffffff;
     display: flex;
+    justify-content: center;
+    align-items: center;
+
     flex-direction: column;
-    transition: .4s;
-    position: relative;
+
+
 }
 
 .card:hover {
@@ -46,7 +57,7 @@
 }
 
 .card__descr-wrapper {
-    padding: 15px;
+    padding: 5px;
     display: grid;
 }
 
