--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,70 @@
-html,
-body,
-#root {
-  width: 100%;
-  height: 400vh;
-  padding: 0px;
+*{
   margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  scroll-snap-type: y proximity;
-
 }
+.container{
+    width: 100%;
+    height: 100vh;
+    
+}
+.fixed_container{
+  width: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+}
+.img{
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../public/image/golf3.jpg");
+  z-index: -2;
+}
+
+.down_container{
+  width: 100%;
+  height: 100vh;
+  background-color: #0e112e;
+  margin-top: 155%;
+  color: white;
+}
+
+.overview_container{
+  padding-left: 12%;
+  width: 100%;
+  height: 100vh;
+}
+
+.style_container{
+  margin-top: 5%;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: start;
+  flex-wrap: wrap;
+  
+}
+.skill_style{
+  display: flex;
+  width: 600px;
+  z-index: 5;
+}
+.languages_style{
+  display: flex;
+  width: 600px;
+  z-index: 5;
+}
+.text_overview{
+  z-index: 5;
+}
+
+.experience_container{
+  width: 100%;
+  height: 100vh;
+}
+
+
+
