--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,26 @@
-*{
+* {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
-.container{
-    width: 100%;
-    height: 100vh;
-    
-}
-.fixed_container{
+
+.container {
   width: 100%;
+  height: 100vh;
+
+}
+
+.fixed_container {
+  width: 100vw;
+  height: 100vh;
   position: fixed;
   top: 0px;
   left: 0px;
 }
-.img{
-  width: 100%;
+
+.img {
+  width: 100vw;
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
@@ -24,47 +28,85 @@
   z-index: -2;
 }
 
-.down_container{
+.down_container {
+  padding-left:170px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100vh;
   background-color: #0e112e;
-  margin-top: 155%;
+  margin-top: 2500px;
   color: white;
 }
 
-.overview_container{
-  padding-left: 12%;
+.overview_container {
+
   width: 100%;
   height: 100vh;
 }
 
-.style_container{
+.style_container {
   margin-top: 5%;
   width: 100%;
   height: 500px;
   display: flex;
   justify-content: start;
   flex-wrap: wrap;
-  
+
 }
-.skill_style{
+
+.skill_style {
   display: flex;
   width: 600px;
-  z-index: 5;
-}
-.languages_style{
-  display: flex;
-  width: 600px;
-  z-index: 5;
-}
-.text_overview{
   z-index: 5;
 }
 
-.experience_container{
+.languages_style {
+  display: flex;
+  width: 600px;
+  z-index: 5;
+}
+
+.text_overview {
+  z-index: 5;
+}
+
+.experience_container {
   width: 100%;
   height: 100vh;
 }
 
+@media (max-width:1024px) {
+  .skill_style {
+    width: 500px;
+  }
 
+  .languages_style {
+    width: 300px;
+  }
 
+  .down_container {
+    height: 80vh;
+    margin-top: 2250px;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (max-width:820px) {
+  .skill_style {
+    width: 500px;
+  }
+
+  .languages_style {
+    width: 300px;
+  }
+
+  .down_container {
+    height: 80vh;
+    margin-top: 2250px;
+  }
+}
