--- a/src/contact.css
+++ b/src/contact.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 5%;
+    margin-top: 70px;
 }
 
 .contact_area {
@@ -228,5 +228,41 @@
 
     100% {
         transform: rotate3d(0, 1, 0, 360deg);
+    }
+}
+
+@media (max-width:1024px){
+    .contact_container{
+        margin-top: -300px;
+    }
+    .contact_form{
+        width: 100%;
+        height: 20%;
+    }
+}
+@media (max-width:820px){
+    .contact_container{
+        margin-top: 400px;
+    }
+    .contact_form{
+        width: 100%;
+        height: 20%;
+    }
+}
+
+@media (max-width:431px){
+    .contact_container{
+        margin-top: 900px;
+    }
+    .contact_form{
+        width: 100%;
+        height: 50%;
+    }
+    .heading{
+        font-size: 2.5rem;
+    }
+    .area_3D{
+        height: 70%;
+        padding-left: 100px;
     }
 }
