--- a/src/experience.css
+++ b/src/experience.css
@@ -1,8 +1,8 @@
 .vertical {
     display: flex;
     flex-direction: column;
+    margin-top: 100px;
 }
-
 .experience_icon {
     display: flex;
     justify-content: center;
@@ -40,4 +40,20 @@
     font-size: 14px;
     padding-left: 0.25rem;
     letter-spacing: 0.05em;
+}
+
+@media (max-width:1024px){
+    .vertical{
+        margin-top: -400px;
+    }
+}
+@media (max-width:820px){
+    .vertical{
+        margin-top: -200px;
+    }
+}
+@media (max-width:431px){
+    .vertical{
+        margin-top: 400px;
+    }
 }
