--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   padding: 0px;
   box-sizing: border-box;
   scroll-behavior: smooth;
+
 }
 
 .container {
@@ -23,13 +24,15 @@
   width: 100vw;
   height: 100vh;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 1750px;
   background-image: url("../public/image/golf3.jpg");
   z-index: -2;
+  background-position-y: -20px;
+  background-position-x: -130px;
 }
 
 .down_container {
-  padding-left:170px;
+  padding-left: 170px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -78,6 +81,12 @@
 }
 
 @media (max-width:1024px) {
+  .img {
+    background-position-x: -1230px;
+    background-position-y: 0px;
+    background-size: 2900px;
+  }
+
   .skill_style {
     width: 500px;
   }
@@ -97,6 +106,12 @@
 }
 
 @media (max-width:820px) {
+  .img {
+    background-position-x: -1130px;
+    background-position-y: 0px;
+    background-size: 2000px;
+  }
+
   .skill_style {
     width: 500px;
   }
