--- a/src/menü.css
+++ b/src/menü.css
@@ -1,163 +1,164 @@
 .menü_container {
-    position: fixed;
-    top: 0px;
-    color: black;
-    z-index: 55;
-    background-color: #00ffff;
-    width: 300px;
-    height: 100vh;
-  
-  }
-  
-  .menü_item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2px;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .menü_item ul {
-    width: 100%;
-    height: 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .menü_item ul li {
-    font-size: 25px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-  }
-  
-  .open {
-    right: 0;
-    transition: ease-in-out 0.5s all;
-  }
-  
-  .closed {
-    right: -100%;
-    transition: ease-in-out 0.5s all;
-  }
-  
-  
-  
-  
-  
-  
-  
-  .menü_con {
-    position: fixed;
-    top: 20px;
-    right: 30px;
-    z-index: 56;
-  }
-  
-  .hamburger {
-    cursor: pointer;
-  
-  }
-  
-  .hamburger input {
-    display: none;
-  }
-  
-  .hamburger svg {
-    /* The size of the SVG defines the overall size */
-    height: 3em;
-    /* Define the transition for transforming the SVG */
-    transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .black{
-    stroke: black;
-    stroke-width: 3;
-  }
-  
-  .line {
-    fill: none;
-    stroke: white;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    stroke-width: 3;
-    /* Define the transition for transforming the Stroke */
-    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
-      stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .line-top-bottom {
-    stroke-dasharray: 12 63;
-    stroke: white;
-  }
-  
-  .hamburger input:checked+svg {
-    transform: rotate(-45deg);
-  }
-  
-  .hamburger input:checked+svg .line-top-bottom {
-    stroke-dasharray: 20 300;
-    stroke-dashoffset: -32.42;
-    stroke: white;
-  }
-  
-  
-  .btn {
-    font-size: 17px;
-    background: transparent;
-    border: none;
-    padding: 1em 1.5em;
-    color: black;
-    text-transform: uppercase;
-    position: relative;
-    transition: .5s ease;
-    cursor: pointer;
-  }
-  
-  .btn::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 2px;
-    width: 0;
-    background-color: #0e112e;
-    transition: .5s ease;
-    cursor: pointer;
-  }
-  
-  .btn:hover {
-    color: white;
-    transition-delay: .5s;
-    cursor: pointer;
-  }
-  
-  .btn:hover::before {
-    width: 100%;
-    cursor: pointer;
-  }
-  
-  .btn::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 0;
-    width: 100%;
-    background-color: #0e112e;
-    transition: .4s ease;
-    z-index: -1;
-    cursor: pointer;
-  }
-  
-  .btn:hover::after {
-    height: 100%;
-    transition-delay: 0.4s;
-    color: aliceblue;
-    cursor: pointer;
-  }
+  position: fixed;
+  top: 0px;
+  color: black;
+  z-index: 55;
+  background-color: #00ffff;
+  width: 300px;
+  height: 100vh;
+
+}
+
+.menü_item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+  width: 100%;
+  height: 100%;
+}
+
+.menü_item ul {
+  width: 100%;
+  height: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.menü_item ul li {
+  font-size: 25px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.open {
+  right: 0;
+  transition: ease-in-out 0.5s all;
+}
+
+.closed {
+  right: -100%;
+  transition: ease-in-out 0.5s all;
+}
+
+
+
+
+
+
+
+.menü_con {
+  position: fixed;
+  top: 20px;
+  right: 30px;
+  z-index: 56;
+}
+
+.hamburger {
+  cursor: pointer;
+
+}
+
+.hamburger input {
+  display: none;
+}
+
+.hamburger svg {
+  /* The size of the SVG defines the overall size */
+  height: 3em;
+  /* Define the transition for transforming the SVG */
+  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.black {
+  stroke: black;
+  stroke-width: 3;
+}
+
+.line {
+  fill: none;
+  stroke: blue;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 3;
+  /* Define the transition for transforming the Stroke */
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line-top-bottom {
+  stroke-dasharray: 12 63;
+  stroke: blue;
+}
+
+.hamburger input:checked+svg {
+  transform: rotate(-45deg);
+}
+
+.hamburger input:checked+svg .line-top-bottom {
+  stroke-dasharray: 20 300;
+  stroke-dashoffset: -32.42;
+  stroke: blue;
+}
+
+
+.btn {
+  font-size: 17px;
+  background: transparent;
+  border: none;
+  padding: 1em 1.5em;
+  color: black;
+  text-transform: uppercase;
+  position: relative;
+  transition: .5s ease;
+  cursor: pointer;
+}
+
+.btn::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 2px;
+  width: 0;
+  background-color: #0e112e;
+  transition: .5s ease;
+  cursor: pointer;
+}
+
+.btn:hover {
+  color: white;
+  transition-delay: .5s;
+  cursor: pointer;
+}
+
+.btn:hover::before {
+  width: 100%;
+  cursor: pointer;
+}
+
+.btn::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 0;
+  width: 100%;
+  background-color: #0e112e;
+  transition: .4s ease;
+  z-index: -1;
+  cursor: pointer;
+}
+
+.btn:hover::after {
+  height: 100%;
+  transition-delay: 0.4s;
+  color: aliceblue;
+  cursor: pointer;
+}
