--- a/src/contact.css
+++ b/src/contact.css
@@ -36,11 +36,6 @@
 }
 
 
-
-
-
-
-
 .orange {
     color: #00ffff;
 }
@@ -221,8 +216,9 @@
     background: #00ffff;
     transform: rotateX(90deg) translateZ(100px);
 }
-.vertical-timeline-element-date{
-color: white;
+
+.vertical-timeline-element-date {
+    color: white;
 }
 
 @keyframes rotate {
@@ -275,9 +271,13 @@ color: white;
         height: 70%;
         padding-left: 100px;
     }
+    .contact_3D{
+        margin-top: 40px;
+    }
 }
+
 @media (max-width:431px) {
     .contact_container {
-        margin-top: 1100px;
+        margin-top: 1000px;
     }
 }
